<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Initiative Manager</string>
    <string name="action_settings">Settings</string>
    <string name="dice_result_tag">Dice result</string>
    <string name="last_5_rolls_tag">Last 5 Rolls</string>
    <string name="D2">D2</string>
    <string name="D4">D4</string>
    <string name="D6">D6</string>
    <string name="D8">D8</string>
    <string name="D10">D10</string>
    <string name="D12">D12</string>
    <string name="D20">D20</string>
    <string name="D30">D30</string>
    <string name="D100">D100</string>
    <string name="clear">X</string>
    <string name="npc">NPC</string>
    <string name="Name">Name</string>
    <string name="HealthPoints">HP</string>
    <string name="initiative_short">Ini</string>
    <string name="initiative_long">Initiative</string>
    <string name="active">Aktiv</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_test">Test</string>
    <string name="stamina">Sta</string>
    <string name="selected_character">Selected Character</string>
    <string name="isNPC">NPC?</string>
    <string name="title_activity_character_list">Character List</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_character">Add Character</string>
    <string name="delete_character">Delete Character</string>
    <string name="character_amount">How many Characters?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_char_list">CharList</string>
    <string name="delete_db">Delete DB</string>
    <string name="edit_char">Edit Char</string>
    <string name="title_activity_char_edit">CharEditActivity</string>
    <string name="stamina_long">Stamina</string>
    <string name="ok">Ok</string>
    <string name="characters_in_fight">Characters in fight</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="delete">Delete</string>
    <string name="new_character">New Character</string>
    <string name="add_to_fight">Add to fight</string>
    <string name="edit_character">Edit Character</string>
    <string name="amount">How Many?</string>

</resources>