<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:baselineAligned="false"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:id="@+id/lay_dice"
        android:baselineAligned="false"
        android:layout_marginLeft="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:id="@+id/lay_dice_result">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/dice_result_tag"
                android:id="@+id/lab_lastroll_title"
                android:layout_weight="2"
                android:textSize="@dimen/text_dice_result_tag"
                android:textColor="@color/text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/lab_lastroll"
                android:layout_weight="4"
                android:text="20"
                android:textSize="@dimen/text_dice_result"
                android:textColor="@color/text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/last_5_rolls_tag"
                android:id="@+id/lab_last5rolls_title"
                android:layout_weight="2"
                android:textSize="@dimen/text_last_5_rolls_tag"
                android:textColor="@color/text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="5/10/nein/20/1"
                android:id="@+id/lab_last5rolls"
                android:layout_weight="4"
                android:textSize="@dimen/text_last_5_rolls"
                android:textColor="@color/text_dark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:id="@+id/lay_dice_btn">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/lay_dice_btn_2_10">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D2"
                    android:id="@+id/btn_d2"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_1digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D4"
                    android:id="@+id/btn_d4"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_1digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D6"
                    android:id="@+id/btn_d6"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_1digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D8"
                    android:id="@+id/btn_d8"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_1digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D10"
                    android:id="@+id/btn_d10"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_2digit" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/lay_dice_btn_12_X">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D12"
                    android:id="@+id/btn_d12"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_2digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D20"
                    android:id="@+id/btn_d20"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_2digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D30"
                    android:id="@+id/btn_d30"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_2digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/D100"
                    android:id="@+id/btn_d100"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_dice_size_3digit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:id="@+id/btn_clear"
                    android:layout_weight="1"
                    android:textColor="@color/text_red"
                    android:textSize="@dimen/text_dice_size_clear"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:id="@+id/lay_fightlist"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/characters_in_fight"
            android:id="@+id/lab_fightlist_title"
            android:textColor="@color/text_dark" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_fightlist"
            android:layout_below="@+id/lab_fightlist_title"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/lay_fight_control">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/btn_start"
                android:layout_weight="1"
                android:textSize="@dimen/text_btn_fight_control" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/btn_next"
                android:layout_weight="1"
                android:textSize="@dimen/text_btn_fight_control"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:id="@+id/btn_end"
                android:layout_weight="1"
                android:textSize="@dimen/text_btn_fight_control"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btn_add"
                android:layout_weight="1"
                android:textSize="@dimen/text_btn_fight_control"
                android:onClick="openCharList" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/btn_delete"
                android:layout_weight="1"
                android:textSize="@dimen/text_btn_fight_control"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:id="@+id/lay_charedit"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_character"
            android:id="@+id/lab_selected_character"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textSize="@dimen/text_selectedcharacter_title"
            android:textColor="@color/text_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:id="@+id/lab_amount"
            android:layout_below="@+id/lab_selected_character"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_selectedcharacter_label"
            android:textColor="@color/text_dark"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HealthPoints"
            android:id="@+id/lab_hp"
            android:layout_below="@+id/lab_amount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_selectedcharacter_label"
            android:textColor="@color/text_dark"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stamina_long"
            android:id="@+id/lab_stamina"
            android:textSize="@dimen/text_selectedcharacter_label"
            android:textColor="@color/text_dark"
            android:layout_toEndOf="@+id/lab_selected_character"
            android:layout_toRightOf="@+id/inp_amount"
            android:layout_marginTop="10dp"
            android:layout_alignBottom="@+id/lab_amount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initiative_long"
            android:id="@+id/lab_initiative"
            android:textSize="@dimen/text_selectedcharacter_label"
            android:textColor="@color/text_dark"
            android:layout_toEndOf="@+id/lab_selected_character"
            android:layout_below="@+id/lab_stamina"
            android:layout_alignLeft="@+id/lab_stamina"
            android:layout_marginTop="30dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inp_amount"
            android:layout_toRightOf="@+id/lab_amount"
            android:layout_toEndOf="@+id/lab_amount"
            android:text="This is a long name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/text_selectedcharacter_label"
            android:layout_alignBottom="@+id/lab_amount"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inp_hp"
            android:layout_toEndOf="@+id/lab_amount"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:layout_alignLeft="@+id/inp_amount"
            android:layout_alignBottom="@+id/lab_hp"
            android:text="25"
            android:textSize="@dimen/text_selectedcharacter_title"
            android:textStyle="bold"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inp_stamina"
            android:layout_toEndOf="@+id/lab_amount"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:layout_alignBottom="@+id/lab_stamina"
            android:text="25"
            android:textSize="@dimen/text_selectedcharacter_title"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/lab_stamina"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inp_initiative"
            android:layout_toEndOf="@+id/lab_amount"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:layout_alignBottom="@+id/lab_initiative"
            android:text="25"
            android:textSize="@dimen/text_selectedcharacter_title"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/lab_stamina"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:imeOptions="actionDone"/>
    </RelativeLayout>
</LinearLayout>
