<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mittidesign.initiativemanager.CharListActivity"
    android:orientation="vertical">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/character_list"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_character"
            android:id="@+id/lab_selected_char_txt"
            android:textStyle="bold"
            android:textSize="@dimen/text_selectedcharacter_title"
            android:textColor="@color/text_dark"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lab_selected_char"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/lab_selected_char_txt"
            android:layout_alignBottom="@+id/lab_selected_char_txt"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_selectedcharacter_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_character"
            android:id="@+id/btn_new_char"
            android:layout_below="@+id/lab_selected_char_txt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_character"
            android:id="@+id/btn_delete_char"
            android:layout_toRightOf="@+id/btn_new_char"
            android:layout_alignBottom="@+id/btn_new_char" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_db"
            android:id="@+id/btn_delete_db"
            android:layout_below="@+id/btn_new_char"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_fight"
            android:id="@+id/btn_add_fight"
            android:layout_below="@+id/btn_delete_db"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_char"
            android:id="@+id/btn_edit_char"
            android:layout_below="@+id/btn_delete_char"
            android:layout_alignLeft="@+id/btn_delete_char"
            android:layout_alignStart="@+id/btn_delete_char" />
    </RelativeLayout>

</LinearLayout>
